# corvus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
corvus/: cli.py  config.py  secrets.py  sender_lists.py
corvus/audit/: email_logger.py  logger.py
corvus/digest/: daily.py
corvus/executors/: document_tagger.py  email_classifier.py  email_extractor.py  query_interpreter.py
corvus/integrations/: imap.py  ntfy.py  ollama.py  paperless.py  search.py
corvus/orchestrator/: conversation_store.py  email_pipelines.py  history.py  pipelines.py  router.py
corvus/planner/: intent_classifier.py
corvus/queue/: email_review.py  review.py
corvus/router/: email.py  retrieval.py  tagging.py
corvus/schemas/: __init__.py  document_retrieval.py  document_tagging.py  email.py  orchestrator.py  paperless.py  sender_lists.py  voice.py  watchdog.py
corvus/voice/: __init__.py  audio.py  pipeline.py  stt.py  tts.py  wakeword.py
corvus/watchdog/: __init__.py  audit.py  hash_store.py  transfer.py  watcher.py
corvus/web/: __init__.py  app.py  auth.py  routes.py  voice_ws.py
corvus/web/static/: app.js  audio-processor.js  index.html  manifest.json  review.html  review.js  style.css  sw.js  voice.html  voice.js
docs/: backlog_archive.md  backlog_current.md  cloudflare_tunnel_setup.md  continuity.md  email_guide.md  paperless_guide.md
models/: hey_corvus.onnx
tests/: conftest.py  test_audit_log.py  test_cli.py  test_conversation_history.py  test_conversation_store.py  test_daily_digest.py  test_document_tagger.py  test_e2e_tagging_pipeline.py  test_email_audit_log.py  test_email_classifier.py  test_email_cli.py  test_email_extractor.py  test_email_imap.py  test_email_pipeline.py  test_email_review_queue.py  test_email_router.py  test_email_schemas.py  test_hash_store.py  test_intent_classifier.py  test_ntfy.py  test_ollama_client.py  test_orchestrator_router.py  test_paperless_client.py  test_pipeline_handlers.py  test_query_interpreter.py  test_retrieval_router.py  test_review_queue.py  test_search_integration.py  test_sender_lists.py  test_tagging_router.py  test_voice_audio.py  test_voice_cli.py  test_voice_pipeline.py  test_voice_schemas.py  test_voice_stt.py  test_voice_tts.py  test_voice_wakeword.py  test_watchdog_audit.py  test_watchdog_cli.py  test_watchdog_transfer.py  (+1 more)
