[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "corvus"
version = "0.1.0"
description = "Local limited-autonomous agent system for homelab digital chores"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.0",
    "watchdog>=6.0",
    "ddgs>=9.0",
    "trafilatura>=1.6",
    "imap-tools>=1.7",
]

[project.scripts]
corvus = "corvus.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
voice = [
    "faster-whisper>=1.0",
    "kokoro>=0.9",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "openwakeword @ git+https://github.com/dscripka/openWakeWord.git@main",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
include = ["corvus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that require LLM inference (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["corvus"]
